--- a/css/menu.css
+++ b/css/menu.css
@@ -1,7 +1,6 @@
 .Menu{
     min-width: 100%;
     min-height: 1000px;
-    background-image: url("../images/nok.jpg");
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: center;
@@ -113,10 +112,6 @@ color: rgb(38, 112, 38);
     .main_menu p{
         font-size: 7px;
     }
-    .main_menu{
-        text-align: center;
-        padding: 20px;
-    }
     .menu_cards{
         max-height: 800px;
         background-color: white;
@@ -130,6 +125,7 @@ color: rgb(38, 112, 38);
         width: 150px;
         margin-top: 20px;
         height: 200px;
+        margin-right: 20px;
     }
     .card img{
         width: 100px;
@@ -157,19 +153,18 @@ color: rgb(38, 112, 38);
     color: rgb(38, 112, 38);
     } 
     .main_menu{
-        max-width: 1000px;
-        max-height: 40vh;
+        max-width:100%;
+        max-height: 30vh;
         background-color: rgb(235, 233, 233);
         border-radius: 30px;
         text-align: center;
-        padding: 20px;
-        margin-top: 20px;
+        padding: 10px;
+        margin-top: -40px;
         margin-bottom: 30px;
     }
     .Menu{
-        min-width: 300px;
+        min-width: 280px;
         min-height: 1000px;
-        background-image: url("../images/nok.jpg");
         background-attachment: unset;
         background-repeat: no-repeat;
         background-position: center;
@@ -179,5 +174,8 @@ color: rgb(38, 112, 38);
         align-items: center;
         justify-content: center;
         border-top-left-radius: 20px;
+    }
+    .card .lorem_food{
+        min-width: 70px;
     }
 }
