--- a/css/testeMenu.css
+++ b/css/testeMenu.css
@@ -94,6 +94,7 @@ footer a:hover{
         align-items: center;
         background-color: rgb(235, 233, 233);
         padding-top: 90px;
+        overflow: hidden;
     
     }
     .items{
