--- a/css/style.css
+++ b/css/style.css
@@ -71,21 +71,20 @@ header{
         font-family: fantasy;
         font-weight: bold;
         font-size: 15px;
+        margin-left: 20px;
     }
     .menus{
         margin-right: 20px;
         display: none;
     }
-    .cartButton{
-      display: none;
-    }
+    
     header{
         position: fixed;
         top: 0;
         left: 0;
         z-index: 99;
         background-color: rgb(238, 234, 227);
-        min-width: 100%;
+        min-width: 93%;
         min-height: 40px;
         padding: 10px;
         margin: 0;
@@ -96,4 +95,5 @@ header{
         justify-content:space-between;
         align-items: center;
     }
+  
 }
