--- a/css/testeMenu.css
+++ b/css/testeMenu.css
@@ -75,6 +75,7 @@ background-size: cover;
     padding-left: 15px;
     background-color: rgb(38, 112, 38);
     display: none;
+    border-radius: 505;
 }
 
 
@@ -100,7 +101,16 @@ footer a:hover{
     .items{
         display: grid;
         grid-template-columns: repeat(1,1fr);
-        margin-left: 30px;
+        margin-left: 50px;
+    }
+    .bottom{
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 200px;
+        background-color: green;
+        display: inline-block;
     }
 .cardteste{
     width: 250px;
@@ -126,4 +136,8 @@ margin-bottom: 10px;
 .cardteste i{
 color: rgb(38, 112, 38);
 }
+
+}
+.bottom{
+    display: none;
 }
