--- a/css/menu.css
+++ b/css/menu.css
@@ -151,6 +151,7 @@ color: rgb(38, 112, 38);
     background-color:rgb(255, 255, 255) ;
     border-color: rgb(38, 112, 38);
     color: rgb(38, 112, 38);
+    margin-left: 20px;
     } 
     .main_menu{
         max-width:100%;
